[FLINK-34266][FLINK-34213] Compute Autoscaler metrics correctly over metric window