@@ -21,8 +21,8 @@ import org.apache.flink.api.java.tuple.Tuple2;
 import org.apache.flink.autoscaler.config.AutoScalerOptions;
 import org.apache.flink.autoscaler.metrics.CollectedMetricHistory;
 import org.apache.flink.autoscaler.metrics.CollectedMetrics;
-import org.apache.flink.autoscaler.metrics.Edge;
 import org.apache.flink.autoscaler.metrics.EvaluatedScalingMetric;
+import org.apache.flink.autoscaler.metrics.MetricAggregator;
 import org.apache.flink.autoscaler.metrics.ScalingMetric;
 import org.apache.flink.autoscaler.topology.JobTopology;
 import org.apache.flink.autoscaler.topology.VertexInfo;
@@ -51,6 +51,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 /** Scaling evaluator test. */
 public class ScalingMetricEvaluatorTest {
 
+    private ScalingMetricEvaluator evaluator = new ScalingMetricEvaluator();
+
     @Test
     public void testLagBasedSourceScaling() {
         var source = new JobVertexID();
@@ -58,57 +60,49 @@ public class ScalingMetricEvaluatorTest {
 
         var topology =
                 new JobTopology(
-                        new VertexInfo(source, Collections.emptySet(), 1, 1),
-                        new VertexInfo(sink, Set.of(source), 1, 1));
-
-        var evaluator = new ScalingMetricEvaluator();
+                        new VertexInfo(source, Collections.emptySet(), 1, 1, null),
+                        new VertexInfo(sink, Set.of(source), 1, 1, null));
 
         var metricHistory = new TreeMap<Instant, CollectedMetrics>();
 
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(1000),
                 new CollectedMetrics(
                         Map.of(
                                 source,
                                 Map.of(
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        100.,
                                         ScalingMetric.LAG,
+                                        950.,
+                                        ScalingMetric.NUM_RECORDS_IN,
                                         0.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        200.,
+                                        ScalingMetric.NUM_RECORDS_OUT,
+                                        0.,
                                         ScalingMetric.LOAD,
                                         .8),
                                 sink,
-                                Map.of(
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        2000.,
-                                        ScalingMetric.LOAD,
-                                        .4)),
-                        Map.of(new Edge(source, sink), 2.),
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 0., ScalingMetric.LOAD, .4)),
                         Map.of()));
 
+        // Lag 950 -> 1000
+        // Input records 0 -> 100
+        // -> Source Data rate = 150
+        // Output ratio 2
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(2000),
                 new CollectedMetrics(
                         Map.of(
                                 source,
                                 Map.of(
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        200.,
                                         ScalingMetric.LAG,
                                         1000.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
+                                        ScalingMetric.NUM_RECORDS_IN,
+                                        100.,
+                                        ScalingMetric.NUM_RECORDS_OUT,
                                         200.,
                                         ScalingMetric.LOAD,
                                         .6),
                                 sink,
-                                Map.of(
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        2000.,
-                                        ScalingMetric.LOAD,
-                                        .3)),
-                        Map.of(new Edge(source, sink), 2.),
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 200., ScalingMetric.LOAD, .3)),
                         Map.of()));
 
         var conf = new Configuration();
@@ -123,21 +117,21 @@ public class ScalingMetricEvaluatorTest {
                         .getVertexMetrics();
 
         assertEquals(
-                new EvaluatedScalingMetric(.6, .7),
+                EvaluatedScalingMetric.avg(.7),
                 evaluatedMetrics.get(source).get(ScalingMetric.LOAD));
 
         assertEquals(
-                new EvaluatedScalingMetric(.3, .35),
+                EvaluatedScalingMetric.avg(.35),
                 evaluatedMetrics.get(sink).get(ScalingMetric.LOAD));
 
         assertEquals(
-                new EvaluatedScalingMetric(200, 150),
+                EvaluatedScalingMetric.avg(150),
                 evaluatedMetrics.get(source).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
-                EvaluatedScalingMetric.of(500),
+                EvaluatedScalingMetric.of(500.),
                 evaluatedMetrics.get(source).get(ScalingMetric.CATCH_UP_DATA_RATE));
         assertEquals(
-                new EvaluatedScalingMetric(400, 300),
+                EvaluatedScalingMetric.avg(300),
                 evaluatedMetrics.get(sink).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(1000),
@@ -156,13 +150,13 @@ public class ScalingMetricEvaluatorTest {
                                 Duration.ZERO)
                         .getVertexMetrics();
         assertEquals(
-                new EvaluatedScalingMetric(200, 150),
+                EvaluatedScalingMetric.avg(150),
                 evaluatedMetrics.get(source).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(1000),
                 evaluatedMetrics.get(source).get(ScalingMetric.CATCH_UP_DATA_RATE));
         assertEquals(
-                new EvaluatedScalingMetric(400, 300),
+                EvaluatedScalingMetric.avg(300),
                 evaluatedMetrics.get(sink).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(2000),
@@ -179,13 +173,13 @@ public class ScalingMetricEvaluatorTest {
                                 Duration.ZERO)
                         .getVertexMetrics();
         assertEquals(
-                new EvaluatedScalingMetric(200, 150),
+                EvaluatedScalingMetric.avg(150),
                 evaluatedMetrics.get(source).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(1000),
                 evaluatedMetrics.get(source).get(ScalingMetric.CATCH_UP_DATA_RATE));
         assertEquals(
-                new EvaluatedScalingMetric(400, 300),
+                EvaluatedScalingMetric.avg(300),
                 evaluatedMetrics.get(sink).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(2000),
@@ -201,13 +195,13 @@ public class ScalingMetricEvaluatorTest {
                                 Duration.ZERO)
                         .getVertexMetrics();
         assertEquals(
-                new EvaluatedScalingMetric(200, 150),
+                EvaluatedScalingMetric.avg(150),
                 evaluatedMetrics.get(source).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(0),
                 evaluatedMetrics.get(source).get(ScalingMetric.CATCH_UP_DATA_RATE));
         assertEquals(
-                new EvaluatedScalingMetric(400, 300),
+                EvaluatedScalingMetric.avg(300),
                 evaluatedMetrics.get(sink).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
                 EvaluatedScalingMetric.of(0),
@@ -216,26 +210,39 @@ public class ScalingMetricEvaluatorTest {
         // Test 0 lag
         metricHistory.clear();
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(3000),
                 new CollectedMetrics(
                         Map.of(
                                 source,
                                 Map.of(
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        100.,
                                         ScalingMetric.LAG,
                                         0.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
+                                        ScalingMetric.NUM_RECORDS_IN,
+                                        100.,
+                                        ScalingMetric.NUM_RECORDS_OUT,
                                         200.,
                                         ScalingMetric.LOAD,
-                                        .85),
+                                        .6),
                                 sink,
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 200., ScalingMetric.LOAD, .3)),
+                        Map.of()));
+
+        metricHistory.put(
+                Instant.ofEpochMilli(4000),
+                new CollectedMetrics(
+                        Map.of(
+                                source,
                                 Map.of(
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        2000.,
+                                        ScalingMetric.LAG,
+                                        0.,
+                                        ScalingMetric.NUM_RECORDS_IN,
+                                        200.,
+                                        ScalingMetric.NUM_RECORDS_OUT,
+                                        400.,
                                         ScalingMetric.LOAD,
-                                        .85)),
-                        Map.of(new Edge(source, sink), 2.),
+                                        .6),
+                                sink,
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 400., ScalingMetric.LOAD, .3)),
                         Map.of()));
 
         conf.set(CATCH_UP_DURATION, Duration.ofMinutes(1));
@@ -247,10 +254,10 @@ public class ScalingMetricEvaluatorTest {
                                 Duration.ZERO)
                         .getVertexMetrics();
         assertEquals(
-                new EvaluatedScalingMetric(100, 100),
+                EvaluatedScalingMetric.avg(100),
                 evaluatedMetrics.get(source).get(ScalingMetric.TARGET_DATA_RATE));
         assertEquals(
-                new EvaluatedScalingMetric(200, 200),
+                EvaluatedScalingMetric.avg(200),
                 evaluatedMetrics.get(sink).get(ScalingMetric.TARGET_DATA_RATE));
     }
 
@@ -324,39 +331,38 @@ public class ScalingMetricEvaluatorTest {
 
         // 0 lag
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(0),
                 new CollectedMetrics(
                         Map.of(
                                 source,
-                                Map.of(
-                                        ScalingMetric.LAG,
-                                        0.,
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
-                                        100.),
+                                Map.of(ScalingMetric.LAG, 0., ScalingMetric.NUM_RECORDS_IN, 0.),
                                 sink,
-                                Map.of(ScalingMetric.TRUE_PROCESSING_RATE, 2000.)),
-                        Collections.emptyMap(),
+                                Map.of()),
+                        Map.of()));
+
+        metricHistory.put(
+                Instant.ofEpochMilli(1000),
+                new CollectedMetrics(
+                        Map.of(
+                                source,
+                                Map.of(ScalingMetric.LAG, 0., ScalingMetric.NUM_RECORDS_IN, 100.),
+                                sink,
+                                Map.of()),
                         Map.of()));
         assertFalse(ScalingMetricEvaluator.isProcessingBacklog(topology, metricHistory, conf));
 
         // Missing lag
-        metricHistory.clear();
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(1000),
                 new CollectedMetrics(
-                        Map.of(
-                                source,
-                                Map.of(ScalingMetric.CURRENT_PROCESSING_RATE, 100.),
-                                sink,
-                                Map.of(ScalingMetric.TRUE_PROCESSING_RATE, 2000.)),
-                        Collections.emptyMap(),
+                        Map.of(source, Map.of(ScalingMetric.NUM_RECORDS_IN, 100.), sink, Map.of()),
                         Map.of()));
 
         assertFalse(ScalingMetricEvaluator.isProcessingBacklog(topology, metricHistory, conf));
 
         // Catch up time is more than a minute at avg proc rate (200)
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(1000),
                 new CollectedMetrics(
                         Map.of(
                                 source,
@@ -367,18 +373,17 @@ public class ScalingMetricEvaluatorTest {
                                                                 AutoScalerOptions
                                                                         .BACKLOG_PROCESSING_LAG_THRESHOLD)
                                                         .toSeconds(),
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
-                                        300.),
+                                        ScalingMetric.NUM_RECORDS_IN,
+                                        200.),
                                 sink,
-                                Map.of(ScalingMetric.TRUE_PROCESSING_RATE, 2000.)),
-                        Collections.emptyMap(),
+                                Map.of()),
                         Map.of()));
 
         assertTrue(ScalingMetricEvaluator.isProcessingBacklog(topology, metricHistory, conf));
 
         // Catch up time is less than a minute at avg proc rate (200)
         metricHistory.put(
-                Instant.now(),
+                Instant.ofEpochMilli(1000),
                 new CollectedMetrics(
                         Map.of(
                                 source,
@@ -389,11 +394,10 @@ public class ScalingMetricEvaluatorTest {
                                                                 AutoScalerOptions
                                                                         .BACKLOG_PROCESSING_LAG_THRESHOLD)
                                                         .toSeconds(),
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
+                                        ScalingMetric.NUM_RECORDS_IN,
                                         200.),
                                 sink,
-                                Map.of(ScalingMetric.TRUE_PROCESSING_RATE, 2000.)),
-                        Collections.emptyMap(),
+                                Map.of()),
                         Map.of()));
         assertFalse(ScalingMetricEvaluator.isProcessingBacklog(topology, metricHistory, conf));
     }
@@ -402,177 +406,96 @@ public class ScalingMetricEvaluatorTest {
     public void testObservedTprEvaluation() {
         var source = new JobVertexID();
         var conf = new Configuration();
-        var restartTime = conf.get(AutoScalerOptions.RESTART_TIME);
-
-        var topology = new JobTopology(new VertexInfo(source, Collections.emptySet(), 1, 1));
-        var evaluator = new ScalingMetricEvaluator();
 
         var metricHistory = new TreeMap<Instant, CollectedMetrics>();
         metricHistory.put(
-                Instant.ofEpochMilli(100),
+                Instant.ofEpochMilli(1000),
                 new CollectedMetrics(
-                        Map.of(
-                                source,
-                                Map.of(
-                                        ScalingMetric.LAG,
-                                        0.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        300.,
-                                        ScalingMetric.OBSERVED_TPR,
-                                        200.,
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
-                                        100.,
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        50.,
-                                        ScalingMetric.LOAD,
-                                        10.)),
-                        Map.of(),
-                        Map.of()));
+                        Map.of(source, Map.of(ScalingMetric.OBSERVED_TPR, 200.)), Map.of()));
         metricHistory.put(
-                Instant.ofEpochMilli(200),
+                Instant.ofEpochMilli(2000),
                 new CollectedMetrics(
-                        Map.of(
-                                source,
-                                Map.of(
-                                        ScalingMetric.LAG,
-                                        0.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        400.,
-                                        ScalingMetric.OBSERVED_TPR,
-                                        400.,
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
-                                        100.,
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        50.,
-                                        ScalingMetric.LOAD,
-                                        10.)),
-                        Map.of(),
-                        Map.of()));
+                        Map.of(source, Map.of(ScalingMetric.OBSERVED_TPR, 400.)), Map.of()));
 
         // Observed TPR average : 300
-        // Bust Time TPR average: 350
 
         // Set diff threshold to 20% -> within threshold
         conf.set(AutoScalerOptions.OBSERVED_TRUE_PROCESSING_RATE_SWITCH_THRESHOLD, 0.2);
 
         // Test that we used busy time based TPR
         assertEquals(
-                new EvaluatedScalingMetric(400., 350.),
-                evaluator
-                        .evaluate(
-                                conf,
-                                new CollectedMetricHistory(topology, metricHistory, Instant.now()),
-                                restartTime)
-                        .getVertexMetrics()
-                        .get(source)
-                        .get(ScalingMetric.TRUE_PROCESSING_RATE));
+                350,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        100, 35, metricHistory, source, conf));
 
         // Set diff threshold to 10% -> outside threshold
         conf.set(AutoScalerOptions.OBSERVED_TRUE_PROCESSING_RATE_SWITCH_THRESHOLD, 0.1);
 
         // Test that we used the observed TPR
         assertEquals(
-                new EvaluatedScalingMetric(400, 300.),
-                evaluator
-                        .evaluate(
-                                conf,
-                                new CollectedMetricHistory(topology, metricHistory, Instant.now()),
-                                restartTime)
-                        .getVertexMetrics()
-                        .get(source)
-                        .get(ScalingMetric.TRUE_PROCESSING_RATE));
+                300,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        100, 35, metricHistory, source, conf));
 
         // Test that observed tpr min observations are respected. If less, use busy time
         conf.set(AutoScalerOptions.OBSERVED_TRUE_PROCESSING_RATE_MIN_OBSERVATIONS, 3);
         assertEquals(
-                new EvaluatedScalingMetric(400., 350.),
-                evaluator
-                        .evaluate(
-                                conf,
-                                new CollectedMetricHistory(topology, metricHistory, Instant.now()),
-                                restartTime)
-                        .getVertexMetrics()
-                        .get(source)
-                        .get(ScalingMetric.TRUE_PROCESSING_RATE));
+                350,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        100, 35, metricHistory, source, conf));
     }
 
     @Test
     public void testMissingObservedTpr() {
         var source = new JobVertexID();
         var conf = new Configuration();
-        var restartTime = conf.get(AutoScalerOptions.RESTART_TIME);
+        var metricHistory = new TreeMap<Instant, CollectedMetrics>();
 
-        var topology = new JobTopology(new VertexInfo(source, Collections.emptySet(), 1, 1));
-        var evaluator = new ScalingMetricEvaluator();
+        // Test that we used busy time based TPR even if infinity
+        assertEquals(
+                350.,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        100, 35, metricHistory, source, conf));
+
+        assertEquals(
+                Double.POSITIVE_INFINITY,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        0, 100, metricHistory, source, conf));
+
+        assertEquals(
+                Double.POSITIVE_INFINITY,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        0, 0, metricHistory, source, conf));
+
+        assertEquals(
+                Double.NaN,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        Double.NaN, Double.NaN, metricHistory, source, conf));
+    }
+
+    @Test
+    public void testMissingBusyTimeTpr() {
+        var source = new JobVertexID();
 
         var metricHistory = new TreeMap<Instant, CollectedMetrics>();
         metricHistory.put(
-                Instant.ofEpochMilli(100),
+                Instant.ofEpochMilli(1000),
                 new CollectedMetrics(
-                        Map.of(
-                                source,
-                                Map.of(
-                                        ScalingMetric.LAG,
-                                        0.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        300.,
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
-                                        100.,
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        50.,
-                                        ScalingMetric.LOAD,
-                                        10.)),
-                        Map.of(),
-                        Map.of()));
-
-        // Test that we used busy time based TPR
-        assertEquals(
-                new EvaluatedScalingMetric(300., 300.),
-                evaluator
-                        .evaluate(
-                                conf,
-                                new CollectedMetricHistory(topology, metricHistory, Instant.now()),
-                                restartTime)
-                        .getVertexMetrics()
-                        .get(source)
-                        .get(ScalingMetric.TRUE_PROCESSING_RATE));
-
+                        Map.of(source, Map.of(ScalingMetric.OBSERVED_TPR, 200.)), Map.of()));
         metricHistory.put(
-                Instant.ofEpochMilli(100),
+                Instant.ofEpochMilli(2000),
                 new CollectedMetrics(
-                        Map.of(
-                                source,
-                                Map.of(
-                                        ScalingMetric.LAG,
-                                        0.,
-                                        ScalingMetric.TRUE_PROCESSING_RATE,
-                                        Double.POSITIVE_INFINITY,
-                                        ScalingMetric.CURRENT_PROCESSING_RATE,
-                                        100.,
-                                        ScalingMetric.SOURCE_DATA_RATE,
-                                        50.,
-                                        ScalingMetric.LOAD,
-                                        10.)),
-                        Map.of(),
-                        Map.of()));
-
-        // Test that we used busy time based TPR even when infinity
+                        Map.of(source, Map.of(ScalingMetric.OBSERVED_TPR, 400.)), Map.of()));
         assertEquals(
-                new EvaluatedScalingMetric(Double.POSITIVE_INFINITY, Double.POSITIVE_INFINITY),
-                evaluator
-                        .evaluate(
-                                conf,
-                                new CollectedMetricHistory(topology, metricHistory, Instant.now()),
-                                restartTime)
-                        .getVertexMetrics()
-                        .get(source)
-                        .get(ScalingMetric.TRUE_PROCESSING_RATE));
+                300.,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        Double.NaN, 1., metricHistory, source, new Configuration()));
     }
 
     @Test
     public void testGlobalMetricEvaluation() {
         var globalMetrics = new TreeMap<Instant, CollectedMetrics>();
-        globalMetrics.put(Instant.now(), new CollectedMetrics(Map.of(), Map.of(), Map.of()));
+        globalMetrics.put(Instant.now(), new CollectedMetrics(Map.of(), Map.of()));
 
         assertEquals(
                 Map.of(
@@ -589,7 +512,6 @@ public class ScalingMetricEvaluatorTest {
         globalMetrics.put(
                 Instant.now(),
                 new CollectedMetrics(
-                        Map.of(),
                         Map.of(),
                         Map.of(
                                 ScalingMetric.HEAP_MAX_USAGE_RATIO,
@@ -614,7 +536,6 @@ public class ScalingMetricEvaluatorTest {
                 Instant.now(),
                 new CollectedMetrics(
                         Map.of(),
-                        Map.of(),
                         Map.of(
                                 ScalingMetric.HEAP_MAX_USAGE_RATIO,
                                 0.7,
@@ -635,6 +556,233 @@ public class ScalingMetricEvaluatorTest {
                         ScalingMetric.NUM_TASK_SLOTS_USED,
                         EvaluatedScalingMetric.of(42.)),
                 ScalingMetricEvaluator.evaluateGlobalMetrics(globalMetrics));
+    }
+
+    @Test
+    public void testZeroValuesForRatesOrBusyness() {
+        assertInfiniteTpr(0, 0);
+        assertInfiniteTpr(0, 1);
+        assertInfiniteTpr(1, 0);
+        assertInfiniteTpr(Double.NaN, 0);
+    }
+
+    private static void assertInfiniteTpr(double busyTime, long inputRate) {
+        assertEquals(
+                Double.POSITIVE_INFINITY,
+                ScalingMetricEvaluator.computeTrueProcessingRate(
+                        busyTime,
+                        inputRate,
+                        new TreeMap<>(),
+                        new JobVertexID(),
+                        new Configuration()));
+    }
+
+    @Test
+    public void testBusyTimeEvaluation() {
+        var v = new JobVertexID();
+        var conf = new Configuration();
+        var metricHistory = new TreeMap<Instant, CollectedMetrics>();
+
+        metricHistory.put(
+                Instant.ofEpochMilli(1000),
+                new CollectedMetrics(
+                        Map.of(
+                                v,
+                                Map.of(
+                                        ScalingMetric.LOAD, 0.2,
+                                        ScalingMetric.ACCUMULATED_BUSY_TIME, 10000.)),
+                        Map.of()));
+
+        metricHistory.put(
+                Instant.ofEpochMilli(2000),
+                new CollectedMetrics(
+                        Map.of(
+                                v,
+                                Map.of(
+                                        ScalingMetric.LOAD, 0.3,
+                                        ScalingMetric.ACCUMULATED_BUSY_TIME, 10200.)),
+                        Map.of()));
+
+        metricHistory.put(
+                Instant.ofEpochMilli(3000),
+                new CollectedMetrics(
+                        Map.of(
+                                v,
+                                Map.of(
+                                        ScalingMetric.LOAD, 0.4,
+                                        ScalingMetric.ACCUMULATED_BUSY_TIME, 10400.)),
+                        Map.of()));
+
+        // With MAX or MIN we should compute from LOAD only, parallelism should not matter
+        conf.set(AutoScalerOptions.BUSY_TIME_AGGREGATOR, MetricAggregator.MAX);
+        assertEquals(300., ScalingMetricEvaluator.computeBusyTimeAvg(conf, metricHistory, v, 2));
+        assertEquals(300., ScalingMetricEvaluator.computeBusyTimeAvg(conf, metricHistory, v, 0));
+
+        conf.set(AutoScalerOptions.BUSY_TIME_AGGREGATOR, MetricAggregator.MIN);
+        assertEquals(300., ScalingMetricEvaluator.computeBusyTimeAvg(conf, metricHistory, v, 2));
+        assertEquals(300., ScalingMetricEvaluator.computeBusyTimeAvg(conf, metricHistory, v, 0));
+
+        conf.set(AutoScalerOptions.BUSY_TIME_AGGREGATOR, MetricAggregator.AVG);
+        // With AVG we compute from accumulated busy time
+        // Diff 400 over 2 seconds -> 200 / second (for the whole job -> we need to divide for
+        // parallelism)
+        assertEquals(100., ScalingMetricEvaluator.computeBusyTimeAvg(conf, metricHistory, v, 2));
+        assertEquals(200., ScalingMetricEvaluator.computeBusyTimeAvg(conf, metricHistory, v, 1));
+    }
+
+    @Test
+    public void testComputableOutputRatios() {
+        var source1 = new JobVertexID();
+        var source2 = new JobVertexID();
+
+        var op1 = new JobVertexID();
+        var sink1 = new JobVertexID();
+
+        var topology =
+                new JobTopology(
+                        new VertexInfo(source1, Collections.emptySet(), 1, 1),
+                        new VertexInfo(source2, Collections.emptySet(), 1, 1),
+                        new VertexInfo(op1, Set.of(source1, source2), 1, 1),
+                        new VertexInfo(sink1, Set.of(op1), 1, 1));
+
+        var metricHistory = new TreeMap<Instant, CollectedMetrics>();
+
+        metricHistory.put(
+                Instant.ofEpochMilli(1000),
+                new CollectedMetrics(
+                        Map.of(
+                                source1,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 100.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 100.),
+                                source2,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 100.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 100.),
+                                op1,
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 100.),
+                                sink1,
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 100.)),
+                        Map.of()));
+
+        metricHistory.put(
+                Instant.ofEpochMilli(2000),
+                new CollectedMetrics(
+                        Map.of(
+                                source1,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 200.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 300.),
+                                source2,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 200.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 150.),
+                                op1,
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 350.),
+                                sink1,
+                                Map.of(ScalingMetric.NUM_RECORDS_IN, 150.)),
+                        Map.of()));
+
+        assertEquals(
+                2.,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(
+                        source1, op1, topology, metricHistory));
+        assertEquals(
+                0.5,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(
+                        source2, op1, topology, metricHistory));
+        assertEquals(
+                0.2,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(op1, sink1, topology, metricHistory));
+    }
+
+    @Test
+    public void testOutputRatioFallbackToOutPerSecond() {
+        var source1 = new JobVertexID();
+        var source2 = new JobVertexID();
+
+        var op1 = new JobVertexID();
+        var op2 = new JobVertexID();
+
+        var topology =
+                new JobTopology(
+                        new VertexInfo(source1, Collections.emptySet(), 1, 1),
+                        new VertexInfo(source2, Collections.emptySet(), 1, 1),
+                        new VertexInfo(op1, Set.of(source1, source2), 1, 1),
+                        new VertexInfo(op2, Set.of(source1, source2), 1, 1));
+
+        var metricHistory = new TreeMap<Instant, CollectedMetrics>();
+
+        metricHistory.put(
+                Instant.ofEpochMilli(1000),
+                new CollectedMetrics(
+                        Map.of(
+                                source1,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 0.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 0.),
+                                source2,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 0.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 0.)),
+                        Map.of()));
+
+        metricHistory.put(
+                Instant.ofEpochMilli(2000),
+                new CollectedMetrics(
+                        Map.of(
+                                source1,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 100.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 200.),
+                                source2,
+                                Map.of(
+                                        ScalingMetric.NUM_RECORDS_IN, 100.,
+                                        ScalingMetric.NUM_RECORDS_OUT, 50.)),
+                        Map.of()));
+
+        assertEquals(
+                2.,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(
+                        source1, op1, topology, metricHistory));
+        assertEquals(
+                0.5,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(
+                        source2, op1, topology, metricHistory));
+        assertEquals(
+                2.,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(
+                        source1, op2, topology, metricHistory));
+        assertEquals(
+                0.5,
+                ScalingMetricEvaluator.computeEdgeOutputRatio(
+                        source2, op2, topology, metricHistory));
+    }
+
+    @Test
+    public void getRateTest() {
+        var m1 = ScalingMetric.NUM_RECORDS_IN;
+        var m2 = ScalingMetric.NUM_RECORDS_OUT;
+
+        var v1 = new JobVertexID();
+        var v2 = new JobVertexID();
+
+        var history = new TreeMap<Instant, CollectedMetrics>();
+        history.put(
+                Instant.ofEpochMilli(1000),
+                new CollectedMetrics(Map.of(v1, Map.of(m1, 0.), v2, Map.of()), null));
+        history.put(
+                Instant.ofEpochMilli(2000),
+                new CollectedMetrics(Map.of(v1, Map.of(m1, 0., m2, 10.), v2, Map.of()), null));
+        history.put(
+                Instant.ofEpochMilli(3000),
+                new CollectedMetrics(
+                        Map.of(v1, Map.of(m1, 4., m2, 20.), v2, Map.of(m1, 1.)), null));
+
+        assertEquals(2, ScalingMetricEvaluator.getRate(m1, v1, history));
+        assertEquals(10., ScalingMetricEvaluator.getRate(m2, v1, history));
+        assertEquals(Double.NaN, ScalingMetricEvaluator.getRate(m1, v2, history));
+        assertEquals(Double.NaN, ScalingMetricEvaluator.getRate(m2, v2, history));
     }
 
     private Tuple2<Double, Double> getThresholds(
@@ -661,9 +809,7 @@ public class ScalingMetricEvaluatorTest {
             boolean catchingUp) {
         var map = new HashMap<ScalingMetric, EvaluatedScalingMetric>();
 
-        map.put(
-                ScalingMetric.TARGET_DATA_RATE,
-                new EvaluatedScalingMetric(Double.NaN, inputTargetRate));
+        map.put(ScalingMetric.TARGET_DATA_RATE, EvaluatedScalingMetric.avg(inputTargetRate));
         map.put(ScalingMetric.CATCH_UP_DATA_RATE, EvaluatedScalingMetric.of(catchUpRate));
 
         ScalingMetricEvaluator.computeProcessingRateThresholds(map, conf, catchingUp, restartTime);
